--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "private": true,
   "version": "0.0.0",
   "description": "Chart for HP students",
+  "homepage": "https://yulifire.github.io/harry-potter-api/",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint --fix .",
@@ -17,7 +20,6 @@
     "@types/date-fns": "^2.5.3",
     "axios": "^1.11.0",
     "date-fns": "^2.30.0",
-    "dotenv": "^16.5.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.5.3",
@@ -35,6 +37,7 @@
     "eslint-plugin-react-compiler": "^19.0.0-beta-af1b7da-20250417",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
+    "gh-pages": "^6.3.0",
     "globals": "^16.3.0",
     "husky": "^9.1.7",
     "jsdom": "^26.1.0",
@@ -50,6 +53,5 @@
     "url": "git+https://github.com/Yuliafire/harry-potter-api"
   },
   "author": "Yulia Podgurskaia",
-  "license": "ISC",
-  "url": "https://github.com/Yuliafire/harry-potter-api"
+  "license": "ISC"
 }
